// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Traverse Should work: __generated__/account-levelisation.update.query.queries.ts 1`] = `
"export interface Params {
    isAccepted?: boolean;
    id?: number;
}
export interface Result {
    id: number;
    isAccepted: boolean;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/account-levelisation.upsert.query.queries.ts 1`] = `
"export interface Params {
    levelisationId?: number;
    start?: Date;
}
export interface Result {
    id: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/account-levelisations.query.queries.ts 1`] = `
"import { Json } from \\"@potygen/potygen\\";
export interface Params {
    q?: string;
    resolvedPostlev?: \\"\\" | boolean;
    state?: (\\"Pending\\" | \\"Done\\");
    levelisationId?: number;
    ids?: number[];
    sortField?: \\"totalPayment\\" | \\"vatPayment\\" | \\"generationPayment\\" | \\"exportPayment\\" | \\"generationEnergy\\" | \\"exportEnergy\\" | \\"cfrFitId\\" | \\"state\\" | \\"isAccepted\\" | \\"error\\" | \\"exportType\\";
    sortOrder?: \\"DESC\\" | \\"ASC\\";
    limit?: number;
    offset?: number;
}
export interface Result<TGenerationPeriods = unknown, TExportPeriods = unknown, TErrorParams = unknown> {
    id: number;
    levelisationId: number;
    accountId: number;
    installationId: number;
    state: \\"Pending\\" | \\"Done\\";
    isAccepted: boolean;
    generationStartReadOn?: Date;
    generationStartReadValue?: number;
    generationEndReadOn?: Date;
    generationEndReadValue?: number;
    generationPercentageSplit?: number;
    generationPayment?: number;
    generationEnergy?: number;
    exportStartReadOn?: Date;
    exportStartReadValue?: number;
    exportEndReadOn?: Date;
    exportEndReadValue?: number;
    exportPercentageSplit?: number;
    exportPayment?: number;
    exportEnergy?: number;
    exportType?: \\"Deemed\\" | \\"Metered Export\\" | \\"Off Grid\\" | \\"PPA\\";
    technologyType?: \\"PV\\" | \\"H\\" | \\"W\\" | \\"AD\\" | \\"CHP\\";
    totalPayment?: number;
    vatPayment?: number;
    generationPeriods?: Json<TGenerationPeriods>;
    exportPeriods?: Json<TExportPeriods>;
    errorCode?: string;
    errorParams?: Json<TErrorParams>;
    cfrFitId: string;
    resolvedPostlevId?: number;
    isBacsPaymentsSent?: boolean;
    isChequePaymentsSent?: boolean;
}
export interface Query<TGenerationPeriods = unknown, TExportPeriods = unknown, TErrorParams = unknown> {
    params: Params;
    result: Result<TGenerationPeriods, TExportPeriods, TErrorParams>;
}
"
`;

exports[`Traverse Should work: __generated__/account-levelisations-bulk-close-accounts.query.queries.ts 1`] = `
"export interface Params {
    ids?: number[];
}
export interface Result {
    id: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/account-levelisations-set-bulk-update.query.queries.ts 1`] = `
"export interface Params {
    ids?: number[];
}
export interface Result {
    id: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/accounts.list.query.queries.ts 1`] = `
"export interface Params {
    q?: string;
    ids?: number[];
}
export interface Result {
    total: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/accounts.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/accounts.query.queries.ts 1`] = `
"export interface Params {
    q?: string;
    ids?: number[];
    limit?: number;
    offset?: number;
}
export interface Result {
    id: number;
    state: \\"Active\\" | \\"Pending\\" | \\"Dispute\\" | \\"Closed\\";
    startOn?: Date;
    firstName: string;
    lastName: string;
    email?: string;
    address: string;
    fitIds: string[];
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/active-meters-with-last-read.query.queries.ts 1`] = `
"export interface Params {
    intervalStart?: Date;
    intervalEnd?: Date;
    accountId?: number;
    meterId?: number;
}
export interface Result {
    id: number;
    msn: string;
    mpan: string;
    make: string;
    model: string;
    type: \\"Export\\" | \\"Generation\\";
    currentPeriodRead?: {
        id: number;
        value: number;
        dateOn: Date;
        submittedAt?: Date;
        reason?: string;
        type: \\"Opening\\" | \\"Closing\\" | \\"Quarterly\\" | \\"Meter Verification\\";
    };
    previousPeriodRead?: {
        id: number;
        value: number;
        dateOn: Date;
        submittedAt?: Date;
        reason?: string;
        type: \\"Opening\\" | \\"Closing\\" | \\"Quarterly\\" | \\"Meter Verification\\";
    };
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/active-meters-wth-reads.query.queries.ts 1`] = `
"export interface Params {
    intervalStart: Date;
    intervalEnd: Date;
    accountId: number;
    meterId?: number;
}
export interface Result {
    id: number;
    msn: string;
    mpan: string;
    make: string;
    model: string;
    type: \\"Export\\" | \\"Generation\\";
    currentPeriodRead?: {
        id: number;
        value: number;
        dateOn: Date;
        submittedAt?: Date;
        reason?: string;
        type: \\"Opening\\" | \\"Closing\\" | \\"Quarterly\\" | \\"Meter Verification\\";
    };
    previousPeriodRead?: {
        id: number;
        value: number;
        dateOn: Date;
        submittedAt?: Date;
        reason?: string;
        type: \\"Opening\\" | \\"Closing\\" | \\"Quarterly\\" | \\"Meter Verification\\";
    };
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/active-reads.view.queries.ts 1`] = `
"import { Json } from \\"@potygen/potygen\\";
export interface Params {
}
export interface Result<THistory = unknown> {
    id: number;
    meter_id: number;
    date_on: Date;
    value: number;
    type: \\"Opening\\" | \\"Closing\\" | \\"Quarterly\\" | \\"Meter Verification\\";
    reason?: string;
    created_at: Date;
    updated_at?: Date;
    /**
     * sql-fit: MeterReading.MeterReadingId
     */
    source_system_id?: number;
    checked: boolean;
    deleted_at?: Date;
    submitted_at?: Date;
    history: Json<THistory>;
    overwritten_at?: Date;
}
export interface Query<THistory = unknown> {
    params: Params;
    result: Result<THistory>;
}
"
`;

exports[`Traverse Should work: __generated__/bacs.query.queries.ts 1`] = `
"export interface Params {
    quarter?: string;
    perPage?: string;
    offset?: string;
}
export interface Result {
    fitId: string;
    name?: string;
    amount: number;
    quarter?: string;
    bankDetails: string;
    addressLine1?: string;
    addressLine2?: string;
    addressLine3?: string;
    postcode: string;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/contracts.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/csa-account-by-id.query.queries.ts 1`] = `
"export interface Params {
    id?: number;
}
export interface Result {
    id: number;
    state: \\"Active\\" | \\"Pending\\" | \\"Dispute\\" | \\"Closed\\";
    contacts: {
        id: number;
        name: string;
        email?: string;
        phone?: string;
        address: {
            id: number;
            addressLine1?: string;
            addressLine2?: string;
            addressLine3?: string;
            city?: string;
            country: string;
            county?: string;
            postCode: string;
        };
        isPrimaryContact: boolean;
        isNominatedRecipient: boolean;
    }[];
    paymentDetails: {
        beneficiaryAccountNumber: string;
        beneficiaryName?: string;
        beneficiarySortCode?: string;
    };
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/cte.query.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
    region: string;
    product: string;
    product_units: number;
    product_sales: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/delete-accounts.query.queries.ts 1`] = `
"export interface Params {
    type?: \\"FIT\\" | \\"SEG\\";
    state?: \\"Active\\" | \\"Pending\\" | \\"Dispute\\" | \\"Closed\\";
}
export interface Result {
    id: number;
    sourceSystemId?: number;
    customerId: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/generation-read-data.query.queries.ts 1`] = `
"export interface Params {
    installationId?: number;
    exportDateOn?: Date;
}
export interface Result {
    dateOn: Date;
    value: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/insert.process.query.queries.ts 1`] = `
"import { Json } from \\"@potygen/potygen\\";
export interface Params<TParamItemsData = unknown> {
    items: {
        processId: number;
        idempotencyKey?: string;
        data: TParamItemsData;
        accountId: number;
    }[];
}
export interface Result<TData = unknown> {
    id: number;
    data: Json<TData>;
}
export interface Query<TParamItemsData = unknown, TData = unknown> {
    params: Params<TParamItemsData>;
    result: Result<TData>;
}
"
`;

exports[`Traverse Should work: __generated__/installation-meter-update.query.queries.ts 1`] = `
"export interface Params {
    removalDate?: Date;
    meterId?: number;
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/installations.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/levelisation-details.query.queries.ts 1`] = `
"export interface Params {
    id?: number;
}
export interface Result {
    id: number;
    quarter: string;
    startOn: Date;
    endOn: Date;
    totalCount: number;
    pendingCount: number;
    errorCount: number;
    successCount: number;
    backsSent: number;
    chequeSent: number;
    totalGenerationPayment: number;
    totalExportPayment: number;
    totalGenerationEnergy: number;
    totalExportEnergy: number;
    totalMeteredExportEnergy: number;
    totalMeteredExportPayment: number;
    totalDeemedExportEnergy: number;
    totalDeemedExportPayment: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/levelisations.list.query.queries.ts 1`] = `
"export interface Params {
    q?: string;
    ids?: number[];
    sortField?: \\"quarter\\";
    sortOrder?: \\"DESC\\" | \\"ASC\\";
    limit?: number;
    offset?: number;
}
export interface Result {
    id: number;
    quarter: string;
    startOn: Date;
    endOn: Date;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/meter-create.query.queries.ts 1`] = `
"export interface Params {
    id?: number;
    msn?: string;
    make?: string;
    model?: string;
    mpan?: string;
    createdAt?: Date;
}
export interface Result {
    id: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/meter-reads.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/process-batch.query.queries.ts 1`] = `
"export interface Params {
    fitIds?: string[];
}
export interface Result {
    cfrFiTId?: string;
    email?: string;
    contactName: string;
    company?: string;
    line1?: string;
    line2: string;
    town?: string;
    postcode: string;
    county?: string;
    country: string;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/rates-by-tarrif-ids.query.queries.ts 1`] = `
"export interface Params {
    ids: number[][];
}
export interface Result {
    tariffId: number;
    rate: number;
    startOn: Date;
    tariffCode: string;
    tariffType: \\"Export\\" | \\"Generation\\" | \\"SEG\\";
    endOn?: Date;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/read-create.query.queries.ts 1`] = `
"export interface Params {
    meterId?: number;
    reason?: string;
    type?: \\"Opening\\" | \\"Closing\\" | \\"Quarterly\\" | \\"Meter Verification\\";
    dateOn?: Date;
    submittedAt?: Date;
    value?: number;
}
export interface Result {
    id: number;
    value: number;
    meterId: number;
    submittedAt?: Date;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/reads-by-account-id.query.queries.ts 1`] = `
"export interface Params {
    id?: number;
    offset?: string;
    perPage?: string;
}
export interface Result {
    id: number;
    msn: string;
    meterId: number;
    dateOn: Date;
    value: number;
    type: \\"Opening\\" | \\"Closing\\" | \\"Quarterly\\" | \\"Meter Verification\\";
    reason?: string;
    createdAt: Date;
    updatedAt?: Date;
    /**
     * sql-fit: MeterReading.MeterReadingId
     */
    sourceSystemId?: number;
    mpan: string;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/recordsets.query.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
    id: number;
    exportType: string;
    energy: number;
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;

exports[`Traverse Should work: __generated__/tariff-rates.queries.ts 1`] = `
"export interface Params {
}
export interface Result {
}
export interface Query {
    params: Params;
    result: Result;
}
"
`;
